--- a/hello_world/Makefile
+++ b/hello_world/Makefile
@@ -11,7 +11,6 @@ AS = gcc -std=c99
 LD = ld
 QEMU = /usr/bin/qemu-system-i386
 
-# CFLAGS = -m32 -g -gstabs -std=c99 -nostdinc -fno-stack-protector -I.
 CFLAGS = -m32 -Wall -Werror -g -gstabs -std=c99 -nostdinc -fno-stack-protector -I.
 ASFLAGS = -m32 -DASSEMBLER -g -gstabs -I.
 LDFLAGS = -melf_i386
@@ -23,8 +22,8 @@ QEMUOPTS = -cpu pentium -rtc base=localtime -m 64M -gdb tcp::1234 -kernel kernel
 .PHONY: all
 all: kernel.bin
 
-kernel.bin: kernel.lds $(OBJS) 
-	$(LD) $(LDFLAGS) -e entry -Tkernel.lds $(OBJS) -o $@
+kernel.bin: kernel.ld $(OBJS) 
+	$(LD) $(LDFLAGS) -e entry -Tkernel.ld $(OBJS) -o $@
 
 clean:
 	$(RM) $(OBJS) $(KERNEL) 
