Call mkdir at before compiling/creating the binary
Closes #1.
This solution is so far not the best, but it works.
We call `@mkdir -p <...>` before compiling any C/S source file
and before linking as well.

See: https://stackoverflow.com/questions/4440500/depending-on-directories-in-make

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -30,16 +30,16 @@ QEMUOPTS = -cpu pentium -rtc base=localtime -m 64M -gdb tcp::$(GDBPORT) -kernel 
 gdb: .gdbinit
 	echo "target remote :$(GDBPORT)" >> .gdbinit
 
-$(OBJDIR):
-	@mkdir -p $@
-
 $(OBJDIR)/%.o: $(SRCDIR)/%.c
+	@mkdir -p $(OBJDIR)
 	$(CC) $(CFLAGS) -c -o $@ $<
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.S
+	@mkdir -p $(OBJDIR)
 	$(AS) $(ASFLAGS) -c -o $@ $<
 
 $(KERNEL): $(LINKER_SCRIPT) $(OBJS) 
+	@mkdir -p $(BINDIR)
 	$(LD) $(LDFLAGS) -T$(LINKER_SCRIPT) $(OBJS) -o $@
 
 .PHONY: clean
@@ -51,7 +51,7 @@ run: $(KERNEL)
 
 .PHONY: tags
 tags:
-	ctags $(SRCS)
+	ctags $(SRCS) 
 
 .PHONY: license
 license:
